--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <mat-sidenav #sidenav mode="over">
     <label>My WebSite</label>
     <hr />
-    <nav>
+    <nav class="left-aligned">
       <a routerLink="/Home" (click)="clickHandler()" routerLinkActive="active"
       >Home</a
       >
@@ -43,7 +43,7 @@
         <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
       </header>
        <span class="spacer"></span>
-  <div class="relative mr-20" >
+  <!--<div class="relative mr-20" >
     <button mat-button (click)="toggleMenu()" class="text-white hover:text-gray-300 focus:outline-none">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="h-5 w-5">
         <path d="M7 10l5 5 5-5z" />
@@ -69,7 +69,7 @@
         </span>
       </button>
     </div>
-  </div>
+  </div>-->
     </mat-toolbar>
     <section>
       <router-outlet></router-outlet>
