--- a/src/app/selected-publications/selected-publications.component.html
+++ b/src/app/selected-publications/selected-publications.component.html
@@ -8,11 +8,13 @@
    <p>November 10, 2021.</p>
  <li>Giovanni Romano and Marina Diaco.</li>
    <a href="/assets/GioBook/romano-diaco2020_article_on.pdf">On formulation of nonlocal elasticity problems.</a>
+  <br>
    <p>Meccanica (2021) 56:1303–1328.</p>
    <a href="https://link.springer.com/article/10.1007/s11012-020-01183-5">https://doi.org/10.1007/s11012-020-01183-5.</a>
      <li>Giovanni Romano, Raffaele Barretta, Marina Diaco.</li>
   <p>Iterative methods for nonlocal elasticity problems</p>
    <a href="/assets/GioBook/romano2019_article_iterativ.pdf">Continuum Mech. Thermodyn. (2019) 31: 669.</a>
+  <br>
   <a href="https://link.springer.com/article/10.1007/s00161-018-0717-8f">https://doi.org/10.1007/s00161-018-0717-8.</a>
  <li>Giovanni Romano, Raimondo Luciano, Raffaele Barretta, Marina Diaco.</li>
   <p>Nonlocal integral elasticity in nanostructures, mixtures, boundary effects and limit behaviours</p>
@@ -56,6 +58,7 @@
   <a href="https://www.sciencedirect.com/science/article/abs/pii/S0020722516305596?via%3Dihub">Micromorphic continua: non-redundant formulations.</a>
   <p>Continuum Mechanics and Thermodyninamics (2016) 28:1659–1670.</p>
   <a href="https://link.springer.com/article/10.1007/s00161-016-0502-5">https://link.springer.com/article/10.1007/s00161-016-0502-5</a>
+  <br>
   <li>Giovanni Romano, Raffaele Barretta, Marina Diaco.</li>
   <a href="/assets/GioBook/accademia_geodyna_2015.pdf">Geometric Action Principles in Classical Dynamics.</a>
   <p>Atti Accademia Nazionale Scienza Lettere ed Arti in Napoli, 1–45, January 2015.</p>
@@ -148,6 +151,87 @@
       <li>Giovanni Romano, Alessandra Romano.</li>
   <a href="/assets/GioBook/tamm_convhomo2005.pdf">Basic issues in convex homogenization.</a>
   <p>Trends and Applications of Mathematics to Mechanics, S. Rionero and G. Romano (eds), Springer, Milano (2005) 185–202, ISBN 88-470-0269-9<br></p>
+  <li>Giovanni Romano, Marina Diaco, Carmen Sellitto.</li>
+  <a href="/assets/GioBook/tamm_stiff2005.pdf">Tangent stiffness of elastic continua on manifolds.</a>
+  <p>Trends and Applications of Mathematics to Mechanics, S. Rionero and G. Romano (eds), Springer, Milan (2005) 155–184, ISBN 88-470-0269-9<br></p>
+  <li>Giovanni Romano, Marina Diaco.</li>
+  <a href="/assets/GioBook/rionero_funframe2004.pdf">A Functional Framework for Applied Continuum Mechanics.</a>
+  <p>New Trends in Mathematical Physics, World Scientific, Singapore (2004) 193–204, ISBN 981-256-077-7<br></p>
+  <li>Giovanni Romano, Francesco Marotti de Sciarra, Marina Diaco.</li>
+  <a href="/assets/GioBook/ijnme_wellpos2001.pdf">Well-posedness and numerical performances of the strain gap method.</a>
+  <p>Int. J. Num. Meth. Eng. (51) 283–306 (2001)<br></p>
+  <li>Giovanni Romano, Marina Diaco.</li>
+  <a href="/assets/GioBook/stamm_sgm2000.pdf">The Strain Gap Method Existence Uniqueness and Convergence Properties.</a>
+  <p>Trends in Applications of Mathematics to Mechanics, P.E. O Donoghue and J.N. Flavin (eds), Elsevier, Paris (2000) 174–179, ISBN 2-84299-245-8<br></p>
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/stamm_korn2000.pdf">On the necessity of Korn's inequality.</a>
+  <p>Trends in Applications of Mathematics to Mechanics, P.E. O Donoghue and J.N. Flavin (eds), Elsevier, Paris (2000) 166–173, ISBN 2-84299-245-8<br></p>
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/stamm_korn2000.pdf">On the necessity of Korn's inequality.</a>
+  <p>Trends in Applications of Mathematics to Mechanics, P.E. O Donoghue and J.N. Flavin (eds), Elsevier, Paris (2000) 166–173, ISBN 2-84299-245-8<br></p>
+  <li>Giovanni Romano, Luciano Rosati, Marina Diaco.</li>
+  <a href="/assets/GioBook/stamm_korn2000.pdf">Well-Posedness of Mixed Formulations in Elasticity.</a>
+  <p>ZAMM, Z. Angew. Math. Mech. 79 (1999) 7, 435--454<br></p>
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/amo_newresults1995.pdf">New Results in Subdifferential Calculus with Applications to Convex Optimization.</a>
+  <p>Appl. Math. Optim. 32, 3 (1995) 213–234. DOI:<br></p>
+  <a href="https://link.springer.com/article/10.1007/BF01187900">https://link.springer.com/article/10.1007/BF01187900.</a>
+  <li>Giovanni Romano, Luciano Rosati, Francesco Marotti de Sciarra.</li>
+  <a href="/assets/GioBook/ijss_letter_to_editor_1995.pdf">A variational theory for finite-step elasto-plastic problems.</a>
+  <br>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/002076839400098H?via%3Dihub">Int. J. Solids Structures 32(10) 1477–1478 (1995).</a>
+  <br>
+  <a href="/assets/GioBook/ijss_authors_closure_1995.pdf">A variational theory for finite-step elasto-plastic problems.</a>
+  <br>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/0020768395900012?via%3Dihub">https://www.sciencedirect.com/science/article/abs/pii/0020768395900012?via%3Dihub</a>
+  <li>Giovanni Romano, Luciano Rosati, Francesco Marotti de Sciarra.</li>
+  <a href="/assets/GioBook/ijss_variational1993.pdf">A variational theory for finite-step elasto-plastic problems.</a>
+  <br>
+  <a href="Int. J. Solids Structures, 30 (17) (1993) 2317–2334.">Int. J. Solids Structures, 30 (17) (1993) 2317–2334.</a>
+  <li>Giovanni Romano, Luciano Rosati, Francesco Marotti de Sciarra, Paolo Bisegna.</li>
+  <a href="/assets/GioBook/qam_romano1993.pdf">A potential theory for monotone multi-valued operators.</a>
+  <br>
+  <a href="Quart. Appl. Math. LI, 4 (1993) 613–631">Quart. Appl. Math. LI, 4 (1993) 613–631.</a>
+  <li>Giovanni Romano, Luciano Rosati, Francesco Marotti de Sciarra.</li>
+  <a href="/assets/GioBook/ijes_intvar1993.pdf">An internal variable theory of inelastic behaviour.</a>
+  <br>
+  <a href="/assets/GioBook/ijes_intvar1993%20(1).pdf">derived from the uniaxial rigid-perfectly plastic law.</a>
+  <p>Int. J. Engng. Sci. 31, 8 (1993) 1105–1120. DOI:<br></p>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/0020722593900859?via%3Dihub">https://www.sciencedirect.com/science/article/abs/pii/0020722593900859?via%3Dihub</a>
+  <li>Giovanni Romano, Luciano Rosati, Giuseppe Ferro.</li>
+  <a href="/assets/GioBook/ijnme_shear1992.pdf">Shear deformability of thin-walled beams with arbitrary cross sections.</a>
+  <p>Int. J. Num. Meth. Eng. (35)283–306 (1992) DOI:<br></p>
+  <a href="https://onlinelibrary.wiley.com/doi/10.1002/nme.1620350205">https://onlinelibrary.wiley.com/doi/10.1002/nme.1620350205.</a>
+  <li>Manfredi Romano.</li>
+  <a href="/assets/GioBook/manfredi_romano-.pdf">Scritti Scelti di Manfredi Romano.</a>
+  <p>Edited by Institute of Scienza delle Costruzioni, Catania University 1990.<br></p>
+  <li>Giovanni Romano, Elio Sacco.</li>
+  <a href="/assets/GioBook/rivitageo_anlim1985.pdf">Analisi limite e collasso plastico per materiali non standard ben posti.</a>
+  <p>Rivista Italiana di Geotecnica 1:37-41(1985).<br></p>
+  <li>Giovanni Romano, Manfredi Romano.</li>
+  <a href="/assets/GioBook/rlina_1979_8_67_1-2_104_0.pdf">Sulla soluzione di problemi strutturali in presenza di legami costitutivi unilaterali.</a>
+  <p>Atti della Accademia Nazionale dei Lincei. Classe di Scienze Fisiche, Matematiche e Naturali. Rendiconti, Serie 8, Vol. 67 (1979), n.1-2, p. 104–113.<br></p>
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/postcritical_behaviour_i.pdf">Postcritical Behaviour of Elastic Structures: Part I: Incremental uniqueness and Stability.</a>
+  <p>Univ. of Calabria Dept. of Structures, Report 8 April 1975.<br></p>
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/postcritical_behaviour_ii.pdf">Postcritical Behaviour of Elastic Structures: Part II: Postcritical Analysis and Imperfection sensitivity.</a>
+  <p>Univ. of Calabria Dept. of Structures, Report 9 April 1975.<br></p>
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/postcritical_behaviour_ii.pdf">On the energy criterion for the stability of continuous elastic structures.</a>
+  <p>10(3) 198–202 (1975) DOI:<br></p>
+  <br>
+  <a href="https://link.springer.com/article/10.1007/BF02149034">https://link.springer.com/article/10.1007/BF02149034</a>
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/meccanica_minpot1974.pdf">On the minimum of the potential energy functional at a critical point.</a>
+  <p>Meccanica 9(4) 198–202 (1974) DOI:<br></p>
+  <a href="https://link.springer.com/article/10.1007/BF02175805">https://link.springer.com/article/10.1007/BF02175805</a>
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/meccanica_potop1972.pdf">Potential operators and conservative systems.</a>
+  <p>Meccanica 7(3)141–146 (1972) DOI:<br></p>
+  <a href="https://link.springer.com/article/10.1007/BF02128759">https://link.springer.com/article/10.1007/BF02128759</a>
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/ingciv_piastre1969.pdf">Limiti di collasso rigido plastico di piastre rettangolari soggette a carichi simmetrici rispetto alle mediane.</a>
 </ul>
 
 </div>
