--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     <figcaption class="font-medium">
     </figcaption>
   </div>
-<figure class="md:flex bg-slate-100 p-8 md:p-5 dark:bg-slate-800 rounded-4">
+<figure class="md:flex bg-slate-100 p-8 md:p-5 bg-sky-950 rounded-4">
   <img class="w-48 h-auto md:w-48 md:h-auto md:rounded-none rounded-none md:margini_auto mIpad:ml-250 md:margini_surfaceDuo md:ml-300" src="/assets/HomeImage/gioprof_med_hr-2.jpeg" alt="Giovanni Romano" width="512" height="512">
     <div class="pt-6 md:p-8 text-center md:text-left space-y-4">
    <figcaption class="font-medium">
